--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ this is the content of HXournal Web Viewer.
 </div><!-- End demo -->
 
 
+<div id="result"> 
 
-<div class="demo-description" style="display: none; ">
-<p>The datepicker is tied to a standard form input field.  Focus on the input (click, or use the tab key) to open an interactive calendar in a small overlay.  Choose a date, click elsewhere on the page (blur the input), or hit the Esc key to close. If a date is chosen, feedback is shown as the input's value.</p>
-</div><!-- End demo-description -->
+</div>
 
 </body>
 
